# pydantic-dynamo

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dodo.py  integration-coverage.xml  pyproject.toml  unit-coverage.xml
docs/: v1.md
pydantic_dynamo/: constants.py  exceptions.py  models.py  repository.py  utils.py
pydantic_dynamo/v2/: models.py  repository.py  sync_repository.py  utils.py  write_once.py
tests/: factories.py  models.py  test_repository.py  test_utils.py
tests/integration/test_v2/: test_repository.py
tests/test_integration/: conftest.py
tests/test_integration/test_v2/: test_repository.py  test_repository_long_running.py  test_write_once.py
tests/test_unit/: test_repository.py  test_utils.py
tests/test_unit/test_v2/: test_repository.py  test_sync_repository.py  test_utils.py  test_write_once.py
tests/unit/: test_repository.py  test_utils.py
